[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"


[[bin]] # Thing that runs the server
name = "server"
path = "src/server.rs"

[[bin]] # Dummy client, just boilerblate for later
name = "client"
path = "src/client.rs"

[dependencies]
rusqlite = "0.26.3"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"
